tests/fixtures/invalid/nullable-parameter.php
<?php

declare(strict_types=1);

function identity(?string $input): string|null
{
    return $input;
}
